tests/machine/x/java/map_nested_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmap_nested_assign3148972679/001/Main.java:8: error: duplicate class: DataClass1
class DataClass1 {
^
/tmp/TestCompileValidProgramsmap_nested_assign3148972679/001/Main.java:23: error: cannot find symbol
	((List)data.get("outer")).put("inner", 2);
	                         ^
  symbol:   method put(String,int)
  location: interface List
Note: /tmp/TestCompileValidProgramsmap_nested_assign3148972679/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors


  1| var data = {"outer": {"inner": 1}}
  2| data["outer"]["inner"] = 2